--- a/index.html
+++ b/index.html
@@ -3401,7 +3401,7 @@ window.addEventListener("mouseup", () => {
             {path:"/",name:"Desktop",type:"folder",ext:"",target:"/desktop"},
             {path:"/",name:"Documents",type:"folder",ext:"",target:"/documents"},
             {path:"/",name:"Recommended files",type:"folder",ext:"",target:"/recommended-files"},
-            {path:"/",name:"Imported",type:"folder",ext:"",target:"/imported"}
+            {path:"/",name:"Imported",type:"folder",ext:"",target:"/imported"},
             {path:"/", name:"Windows", type:"folder", ext:"", target:"/Windows" },
             {path:"/Windows", name:"System32", type:"folder", ext:"", target:"/Windows/System32" },
             {path:"/Windows", name:"Fonts", type:"folder", ext:"", target:"/Windows/Fonts" },
