--- a/index.html
+++ b/index.html
@@ -1906,6 +1906,25 @@
   background: #000;
 }
 
+.updateBtn {
+    background: linear-gradient(135deg, #ff00ff, #00c8ff);
+    border: none;
+    padding: 10px 18px;
+    border-radius: 8px;
+    color: white;
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.updateBtn:hover {
+    opacity: 0.85;
+}
+
+.hidden {
+    display: none;
+}
+
   </style>
   <style id="theme-style"></style>
 </head>
@@ -2445,6 +2464,10 @@
     <div class="window-body">
       <div style="font-size:11px;color:var(--text-soft);margin-bottom:4px;">theme.css (per user)</div>
       <textarea id="theme-css-input" class="notes-area" style="min-height:140px;" placeholder="Write CSS here, e.g. .window { border-radius: 4px; }"></textarea>
+      <div id="updatePanel">
+        <p id="updateStatus">Checking system status…</p>
+        <button id="updateBtn" class="updateBtn">Check for Updates</button>
+      </div>
       <div class="notes-footer">
         <span id="theme-status">Not saved</span>
         <button class="button-small" id="theme-save">Save & apply</button>
@@ -10106,6 +10129,49 @@ function runProgress(bar) {
 
   return win;
 }
+
+const updateBtn = document.getElementById("updateBtn");
+const updateStatus = document.getElementById("updateStatus");
+
+async function checkForUpdates() {
+    updateStatus.textContent = "Checking for updates…";
+
+    try {
+        const response = await fetch("https://alaricholt677.github.io/index.html", {
+            cache: "no-store"
+        });
+
+        const newCode = await response.text();
+        const currentCode = document.documentElement.outerHTML;
+
+        if (newCode.trim() !== currentCode.trim()) {
+            localStorage.setItem("win12_Update", "yes");
+            updateStatus.textContent = "Update available!";
+            updateBtn.textContent = "Update Now";
+        } else {
+            localStorage.setItem("win12_Update", "no");
+            updateStatus.textContent = "Your system is up to date.";
+            updateBtn.textContent = "Check for Updates";
+        }
+    } catch (err) {
+        updateStatus.textContent = "Error checking updates.";
+    }
+}
+
+updateBtn.addEventListener("click", () => {
+    if (localStorage.getItem("win12_Update") === "yes") {
+        window.location.href = "updater.html";
+    } else {
+        checkForUpdates();
+    }
+});
+
+// Load UI state on boot
+if (localStorage.getItem("win12_Update") === "yes") {
+    updateBtn.textContent = "Update Now";
+    updateStatus.textContent = "Update available!";
+}
+
       /* initial */
       function initialSetup(){
         createFullCMDApp();
