Add MiniWord option to dropdown menus

--- a/index.html
+++ b/index.html
@@ -3057,6 +3057,7 @@
         <option>MiniRun</option>
         <option>MiniCPU</option>
         <option>MiniCMD</option>
+        <option>MiniWord</option>
         <option>Weather</option>
         <option>Custom</option>
       </select>
@@ -8749,6 +8750,7 @@ function initWidgetsSystem(currentUser) {
             <option>MiniRun</option>
             <option>MiniCPU</option>
             <option>MiniCMD</option>
+            <option>MiniWord</option>
             <option>Weather</option>
             <option>Custom</option>
           </select>
